<resources>
    <string name="app_name">Game2</string>
    <string name="game_name">Rock Paper Scissors</string>
    <string name="choose">Выберите оружие</string>
    <string name="chosen_rock">Вы выбрали камень!</string>
    <string name="chosen_paper">Вы выбрали бумагу!</string>
    <string name="chosen_scissors">Вы выбрали ножницы!</string>
    <string name="to_choose">Выбрать</string>
    <string name="start_button">Дуэль!</string>
    <string name="again_button">Ещё!</string>
    <string name="winner">Вы выиграли!</string>
    <string name="loser">Вы проиграли!</string>
    <string name="draw">Ничья!</string>
</resources>